# ragfeed-rs

./: .env.example  .gitignore  Cargo.toml  Justfile  README.md  docker-compose.yml
docker/db/: init.sql
migrations/: 20250815015908_init_schema.sql
src/: chunk.rs  embed.rs  extractor.rs  feed.rs  gc.rs  ingest.rs  init.rs  inspect.rs  main.rs  out.rs  query.rs  reindex.rs  stats.rs  tokenizer.rs
src/compose/: mod.rs
src/encoder/: e5_onnx.rs  mod.rs  traits.rs
src/feed/: db.rs  mod.rs  types.rs
src/ingestion/: db.rs  fetch.rs  mod.rs  parse.rs  types.rs  write.rs
src/ingestion/extractor/: arxiv.rs  generic.rs  mod.rs
src/llm/: openai.rs
src/maintenance/: mod.rs
src/maintenance/gc/: counts.rs  deletes.rs  mod.rs  status.rs  vacuum.rs
src/maintenance/reindex/: db.rs  heuristics.rs  mod.rs  ops.rs
src/mcp/: adapter.rs  mod.rs  policy.rs  server.rs  tools.rs  types.rs
src/output/: config.rs  mod.rs  presenter.rs  types.rs
src/pipeline/: mod.rs
src/pipeline/chunk/: db.rs  logic.rs  mod.rs  select.rs
src/pipeline/embed/: db.rs  loop.rs  mod.rs
src/query/: db.rs  mod.rs  post.rs  service.rs
src/stats/: chunk.rs  db.rs  doc.rs  feed.rs  mod.rs  summary.rs  types.rs
src/telemetry/: config.rs  ctx.rs  emit.rs  macros.rs  mod.rs  sink.rs
src/telemetry/ops/: chunk.rs  compose.rs  embed.rs  feed.rs  gc.rs  ingest.rs  init.rs  mod.rs  query.rs  reindex.rs  stats.rs
src/tokenizer/: bytes.rs  e5.rs  gpt2.rs  mod.rs
src/util/: mod.rs  sql.rs  time.rs
