[package]
name = "rss-feeder"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }   # CLI arg parsing
tokio = { version = "1", features = ["full"] }      # async runtime
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "json", "chrono"] }  # DB + migrations
anyhow = "1.0"
dotenvy = "0.15"
rss = "2.0.12"            # Specify a specific version of the rss crate
reqwest = { version = "0.11", features = ["json"] }  # HTTP client for fetching RSS feeds
scraper = "0.16"        # HTML scraping and parsing
chrono = { version = "0.4", features = ["serde", "clock"] }

[build-dependencies]
sqlx-migrate = "0.7"
