[package]
name = "rss-feeder"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }   # CLI arg parsing
tokio = { version = "1", features = ["full"] }      # async runtime
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "json", "chrono"] }  # DB + migrations
anyhow = "1.0"
dotenvy = "0.15"
rss = "2.0.12"            # Specify a specific version of the rss crate
reqwest = { version = "0.11", features = ["json"] }  # HTTP client for fetching RSS feeds
bytes = "1"
scraper = "0.16"        # HTML scraping and parsing
chrono = { version = "0.4", features = ["serde", "clock"] }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
tokenizers = { version = "0.21", features = ["http"] }  # http feature enables Tokenizer::from_pretrained
hf-hub = "0.3"
pgvector = { version = "0.3", features = ["sqlx"] }
ndarray = { version = "0.16", features = ["std"] }
# ort community crate, features for CUDA
ort = { version = "2.0.0-rc.10", default-features = false, features = ["download-binaries", "ndarray"] }
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
async-trait = "0.1"

[build-dependencies]
sqlx-migrate = "0.7"

[features]
default = []
# cuda support w/ --features cuda
cuda = ["ort/cuda"]
gpt2-tokenizer = []
